# cryfa

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  bench_cryfa.sh  cryfa  cryfa.cpp  defs.h  example.fa  execute.sh  in2.fa  install.ps1  install.sh  pass.txt  run.sh
.github/workflows/: CI.yml  ci.yml  diagram.yml  docker-image.yml  release.yml
cmake/: roundtrip.cmake  version.hpp.in
dataset/Redundancy/A/: out11.fa  out12.fa  out127.fa  out14.fa  out151.fa  out187.fa  out188.fa  out190.fa  out52.fa
dataset/Redundancy/B/: out1166.fa  out1221.fa  out1409.fa  out1412.fa  out156.fa  out1837.fa  out1839.fa  out1913.fa  out1943.fa  out2479.fa  out2498.fa  out2499.fa  out2516.fa  out2614.fa  out2615.fa  out2649.fa  out2838.fa  out2886.fa  out309.fa  out3197.fa  out383.fa  out637.fa  out64.fa  out853.fa  out930.fa  out931.fa
dataset/Redundancy/F/: out100.fa  out103.fa  out108.fa  out134.fa  out137.fa  out139.fa  out140.fa  out144.fa  out171.fa  out173.fa  out223.fa  out26.fa  out27.fa  out281.fa  out283.fa  out3.fa  out303.fa  out304.fa  out34.fa  out341.fa  out349.fa  out4.fa  out5.fa  out50.fa  out69.fa  out70.fa  out77.fa  out78.fa  out79.fa  out8.fa  out81.fa  out83.fa  out87.fa  out9.fa  out92.fa
example/: encrypted_message.crf
imgs/: logo.xcf
progs/aescrypt/: aescrypt  pass.txt
progs/cryfa/: cryfa  pass.txt
progs/delim/: delim  delimcs  delimds
progs/dsrc/: dsrc
progs/fqc/: fcompfastq  fdecompfastq  fqc
progs/fqzcomp/: Makefile  README  base_model.h  base_model2.h  clr.cdr  clrf256.cdr  fqz_comp  fqz_comp-cr.c  fqz_comp.c  fqz_comp.cr-try1.c  mem_ps  sfh.c  sfh.h  temp.fq.fqz
progs/gzip/: in.fasta  temp.fastq
progs/lzma/: in.fa.lzma  mem_ps  temp.fastq.lzma
progs/mfcompress/: MFCompressC  MFCompressD
progs/quip/: Makefile  Makefile.in  aclocal.m4  config.status  configure  install-sh  mem_ps  quip  temp.fastq.qp
progs/quip/src/: Makefile  Makefile.in  config.h  config.h.in  version.h
progs/quip/src/.deps/: ac.Po  assembler.Po  bam.Po  bam_aux.Po  bam_import.Po  bgzf.Po  bloom.Po  crc64.Po  dist.Po  fastqfmt.Po  idenc.Po  kmer.Po  kmerhash.Po  kstring.Po  misc.Po  qualenc.Po  quip.Po  quipfmt.Po  quiplib.Po  sam.Po  sam_header.Po  samfmt.Po  samopt.Po  seqenc.Po  seqmap.Po  strmap.Po  twobit.Po
progs/quip/tests/: Makefile  Makefile.in
script/: DownloadArchaea.pl  DownloadBacteria.pl  DownloadPlants.pl  avail_dataset.sh  dep_7zip.sh  dep_boost.sh  dep_cmake.sh  dep_curl.sh  dep_libboost.sh  dep_libcurl.sh  dep_samtools.sh  dep_valgrind.sh  dep_zlib.sh  dl_dataset_redun.sh  dl_denisova_fq.sh  dl_denisova_vcf.sh  dl_human_bam.sh  dl_human_fa.sh  dl_human_fq.sh  dl_human_sam.sh  dl_neanderthal_bam.sh  dl_neanderthal_sam.sh  dl_neanderthal_vcf.sh  dl_viruses_fa.sh  gen_synth_fa.sh  gen_synth_fq.sh  ins_aescrypt.sh  ins_cryfa.sh  ins_deliminate.sh  ins_dsrc.sh  ins_fqc.sh  ins_fqzcomp.sh  ins_mfcompress.sh  ins_quip.sh  par.sh  res_comp.sh  res_comp_enc.sh  res_cryfa_thr.sh  res_cryfa_xcl.sh  res_enc.sh  (+7 more)
scripts/: DownloadViruses.pl  execute.sh  run.sh
scripts/config/: par.sh
scripts/data/: avail_dataset.sh  dl_dataset_redun.sh  dl_denisova_fq.sh  dl_denisova_vcf.sh  dl_human_bam.sh  dl_human_fa.sh  dl_human_fq.sh  dl_human_sam.sh  dl_neanderthal_bam.sh  dl_neanderthal_sam.sh  dl_neanderthal_vcf.sh  dl_viruses_fa.sh  gen_synth_fa.sh  gen_synth_fq.sh
scripts/data/perl/: DownloadFungi.pl
scripts/install/dependencies/: dep_7zip.sh  dep_boost.sh  dep_cmake.sh  dep_curl.sh  dep_samtools.sh  dep_valgrind.sh  dep_zlib.sh
scripts/install/methods/: ins_aescrypt.sh  ins_cryfa.sh  ins_deliminate.sh  ins_dsrc.sh  ins_fqc.sh  ins_fqzcomp.sh  ins_mfcompress.sh  ins_quip.sh
scripts/orchestration/: benchmark_orchestrator.sh
scripts/results/: res_comp.sh  res_comp_enc.sh  res_cryfa_thr.sh  res_enc.sh  run_res_redun.sh
scripts/runtime/: run_fn.sh  run_fn_comp.sh  run_fn_comp_enc.sh  run_fn_cryfa_thr.sh  run_fn_enc.sh  run_local_perf.sh
src/: EnDecrypto.cpp  EnDecrypto.h  EnDecrypto.hpp  FASTA.cpp  FASTA.h  FASTA.hpp  FASTQ.cpp  FASTQ.h  FASTQ.hpp  Security.cpp  Security.h  Security.hpp  application.cpp  application.hpp  assert.hpp  cryfa.cpp  def.h  def.hpp  endecrypto.cpp  endecrypto.hpp  fasta.cpp  fasta.hpp  fastq.cpp  fastq.hpp  fcn.h  file.hpp  fn.hpp  keygen.cpp  numeric.hpp  pack.h  parser.h  parser.hpp  run.sh  security.cpp  security.hpp  string.hpp  time.hpp
src/include/: assert.hpp  file.hpp  numeric.hpp  ordered_pipeline.hpp  plaintext_stream.hpp  string.hpp  time.hpp
